# JPEG-Compression

./: .gitignore  CMakeLists.txt  README.md  build.sh  compress
App/: CMakeLists.txt  Main.cpp
Data/Raw/: blackbuck.ppm
Lib/: CMakeLists.txt
Lib/include/calc/: Calc.h
Lib/include/file/: Bitstream.h
Lib/include/image/: BMP.h  BlockedImage.h  Image.h  PPM.h
Lib/include/math/: Matrix.h
Lib/src/: BMP.cpp  Bitstream.cpp  BlockedImage.cpp  PPM.cpp
Tests/: CMakeLists.txt  ImgTests.cpp  MatrixTests.cpp
